<resources>
    <string name="app_name">Factory Menu</string>
    <string name="str_factory_adc">ADC Adjust</string>
    <string name="str_factory_adc_source">Source</string>
    <string name="str_factory_adc_rgain">R Gain</string>
    <string name="str_factory_adc_ggain">G Gain</string>
    <string name="str_factory_adc_bgain">B Gain</string>
    <string name="str_factory_adc_roffset">R Offset</string>
    <string name="str_factory_adc_goffset">G Offset</string>
    <string name="str_factory_adc_boffset">B Offset</string>
    <string name="str_factory_adc_phase">phase</string>
    <string name="str_factory_adc_autoadjust">Auto Tune</string>
    <string name="str_factory_adc_autoadjust_val">Please Wait!</string>
    <string name="str_factory_adc_autoadjust_ok">success</string>
    <string name="str_factory_adc_autoadjust_failed">failed</string>
    <string name="str_factory_adc_autoadjust_timing_mode_err">timing mode select error</string>
    <string name="str_text_adc_adjust">ADC Adjust</string>
    <string name="str_textview_factory_adc_source_val">VGA</string>
    <string name="str_textview_factory_adc_rgain_val">50</string>
    <string name="str_textview_factory_adc_ggain_val">50</string>
    <string name="str_textview_factory_adc_bgain_val">50</string>
    <string name="str_textview_factory_adc_roffset_val">50</string>
    <string name="str_textview_factory_adc_goffset_val">50</string>
    <string name="str_textview_factory_adc_boffset_val">50</string>
    <string name="str_textview_factory_adc_phase_val">50</string>
    <string name="str_textview_factory_dialogmenu_title">Are You Sure Upgrade?</string>
    <string name="str_textview_factory_dialogmenu_confirm">Confirm</string>
    <string name="str_textview_factory_dialogmenu_cancel">Cancel</string>
    <string name="str_design_menu">Design Menu</string>
    <string name="str_factory_menu">Factory Menu</string>
    <string name="str_factory_whitebalance">White Balance</string>
    <string name="str_factory_wbadjust_source">Source</string>
    <string name="str_factory_wbadjust_rgain">R Gain</string>
    <string name="str_factory_wbadjust_ggain">G Gain</string>
    <string name="str_factory_wbadjust_bgain">B Gain</string>
    <string name="str_factory_wbadjust_roffset">R Offset</string>
    <string name="str_factory_wbadjust_goffset">G Offset</string>
    <string name="str_factory_wbadjust_boffset">B Offset</string>
    <string name="str_factory_wbadjust_autoadjust">Auto Adjust</string>
    <string name="str_factory_wbadjust_colortemp">Color Temperature</string>
    <string name="str_wb_adjust_text">W/B Adjust</string>
    <string name="str_textview_factory_wbadjust_source_val">VGA</string>
    <string name="str_textview_factory_wbadjust_colortemp_val">VGA</string>
    <string name="str_textview_factory_wbadjust_default_val">50</string>
    <string name="str_factory_mac_write">MAC Write</string>
    <string name="str_factory_mac_display">MAC Address :</string>
    <string name="str_textview_factory_macdisplay_val">00:00:00:00:00:00</string>
    <string name="str_factory_macIDdisplay">The current MAC address ID is :</string>
    <string name="str_textview_factory_macIDdisplay_val">0.bin</string>
    <string name="str_factory_picturemode">Picture Mode</string>
    <string name="str_factory_picmode_picmode">Picture Mode</string>
    <string name="str_factory_picmode_brightness">Brightness</string>
    <string name="str_factory_picmode_contrast">Contrast</string>
    <string name="str_factory_picmode_saturation">Saturation</string>
    <string name="str_factory_picmode_hue">Hue</string>
    <string name="str_factory_picmode_sharpness">Sharpness</string>
    <string name="str_factory_picmode_backlight">Backlight</string>
    <string name="str_picture_mode_text">Picture Mode</string>
    <string name="str_textview_factory_picmode_picmode_val">VGA</string>
    <string name="str_textview_factory_picmode_default_val">50</string>
    <string-array name="str_arr_pic_mode_vals">
        <item>Lightness</item>
        <item>Standard</item>
        <item>Soft</item>
        <item>User</item>
        <item>Game</item>
        <item>Auto</item>
        <item>PC</item>
        <item>Vivid</item>
        <item>Natural</item>
        <item>Sports</item>
    </string-array>
    <string name="str_factory_non_standard">Non-standard options</string>
    <string name="str_factory_nonstandard_vif">VIF  (click me)</string>
    <string name="str_factory_nonstandard_vd">VD  (click me)</string>
    <string name="str_factory_nonstandard_audio">AUDIO  (click me)</string>
    <string name="str_factory_nonstandard_viftop">VIF_TOP</string>
    <string name="str_factory_nonstandard_vifvgamaximum">VIF_VGA_MAXIMUM</string>
    <string name="str_factory_nonstandard_vifcpkp">VIF_CR_KP</string>
    <string name="str_factory_nonstandard_vifcpki">VIF_CR_KI</string>
    <string name="str_factory_nonstandard_vifasiasignaloption">VIF_ASIA_SIGNAL_OPTION</string>
    <string name="str_factory_nonstandard_vifcpkpkiadjust">VIF_CR_KP_KI_ADJUST</string>
    <string name="str_factory_nonstandard_vifovermodulation">VIF_OVER_MODULATION</string>
    <string name="str_factory_nonstandard_vifclampgain">VIF_CLAMPGAIN_GAIN_OV_NEGATIVE</string>
    <string name="str_factory_nonstandard_chinadescrambler">CHINA_DESCRAMBLER_BOX</string>
    <string name="str_factory_nonstandard_chinadescrambler_delay">China_DES_BOX_Delay</string>
    <string name="str_factory_nonstandard_delay">Delay</string>
    <string name="str_factory_nonstandard_vifcrthr">VIF_CR_THR</string>
    <string name="str_factory_nonstandard_vifversion">VIF_VERSION</string>
    <string name="str_factory_nonstandard_vifagcref">VIF_AGC_REF</string>
    <string name="str_factory_nonstandard_gaindistributionthr">GAIN_DISTRIBUTION_THR</string>
    <string name="str_factory_nonstandard_afecd4">AFEC_D4</string>
    <string name="str_factory_nonstandard_aefcd5">AFEC_D5[2]</string>
    <string name="str_factory_nonstandard_aefcd8">AFEC_D8[3:0]</string>
    <string name="str_factory_nonstandard_aefcd9">AFEC_D9[0]</string>
    <string name="str_factory_nonstandard_aefcd7high">AFEC_D7_HIGH_BOUN</string>
    <string name="str_factory_nonstandard_aefcd7">AFEC_D7_LOW_BOUN</string>
    <string name="str_factory_nonstandard_aefca0">AFEC_A0</string>
    <string name="str_factory_nonstandard_aefca1">AFEC_A1</string>
    <string name="str_factory_nonstandard_aefc66">AFEC_66[7:6]</string>
    <string name="str_factory_nonstandard_aefc6e">AFEC_6E[7:4]</string>
    <string name="str_factory_nonstandard_aefc6elow">AFEC_6E[3:0]</string>
    <string name="str_factory_nonstandard_aefc43">VD_AUTO_AGC</string>
    <string name="str_factory_nonstandard_aefc44">AFEC_44</string>
    <string name="str_factory_nonstandard_aefccb">AFEC_CB</string>
    <string name="str_factory_nonstandard_vddsp">VD_DSP_VERSION</string>
    <string name="str_factory_nonstandard_audiohidev">AUDIO_HIDEV_MODE</string>
    <string name="str_factory_nonstandard_audionr">AUDIO_NR_THR</string>
    <string name="str_factory_nonstandard_audiosif">Audio Sif Threshold</string>
    <string name="str_factory_nonstandard_audiodsp">AUDIO_DSP_VERSION</string>
    <string name="str_Non_Standard_Adjust_text">Non-Standard Adjust</string>
    <string name="str_textview_factory_nonstandard_default_val">128</string>
    <string name="str_factory_non_linear">Non_linear</string>
    <string name="str_factory_nonlinear_curvetype">Curve Type</string>
    <string name="str_factory_nonlinear_osd0">OSD_0</string>
    <string name="str_factory_nonlinear_osd25">OSD_25</string>
    <string name="str_factory_nonlinear_osd50">OSD_50</string>
    <string name="str_factory_nonlinear_osd75">OSD_75</string>
    <string name="str_factory_nonlinear_osd100">OSD_100</string>
    <string name="str_Non_Linear_Adjust_text">Non-Linear Adjust</string>
    <string name="str_textview_factory_nonlinear_curvetype_val">VGA</string>
    <string name="str_textview_factory_nonlinear_osd_val">50</string>
    <string name="str_factory_overscan">OverScan</string>
    <string name="str_factory_overscan_source">Source</string>
    <string name="str_factory_overscan_hsize">H Size</string>
    <string name="str_factory_overscan_hposition">H Position</string>
    <string name="str_factory_overscan_vsize">V Size</string>
    <string name="str_factory_overscan_vposition">V Position</string>
    <string name="str_factory_overscan_adjust_text">OverScan Adjust</string>
    <string name="str_textview_factory_overscan_source_val">ATV</string>
    <string name="str_textview_factory_overscan_default_val">50</string>
    <string name="str_factory_ssc">SSC Adjust</string>
    <string name="str_factory_ssc_miuenable">MIU Enable</string>
    <string name="str_factory_ssc_miumodulation">MIU Modulation</string>
    <string name="str_factory_ssc_miupercentage">MIU Percentage(%)</string>
    <string name="str_factory_ssc_lvdsenable">LVDS Enable</string>
    <string name="str_factory_ssc_lvdsmodulation">LVDS Modulation</string>
    <string name="str_factory_ssc_lvdspercentage">LVDS Percentage(%)</string>
    <string name="str_factory_ssc_u_miuenable">MIU_U Enable</string>
    <string name="str_factory_ssc_u_miumodulation">MIU_U Modulation</string>
    <string name="str_factory_ssc_u_miupercentage">MIU_U Percentage(%)</string>
    <string name="str_factory_ssc_u_lvdsenable">LVDS_U Enable</string>
    <string name="str_factory_ssc_u_lvdsmodulation">LVDS_U Modulation</string>
    <string name="str_factory_ssc_u_lvdspercentage">LVDS_U Percentage(%)</string>
    <string name="str_ssc_adjust_text">SSC Adjust</string>
    <string name="str_textview_factory_ssc_default_val">128</string>
    <string name="str_factory_peq">PEQ</string>
    <string name="str_factory_peq_fo1coarse">FO1 Coarse</string>
    <string name="str_factory_peq_fo1fine">FO1 Fine</string>
    <string name="str_factory_peq_fo2coarse">FO2 Coarse</string>
    <string name="str_factory_peq_fo2fine">FO2 Fine</string>
    <string name="str_factory_peq_fo3coarse">FO3 Coarse</string>
    <string name="str_factory_peq_fo3fine">FO3 Fine</string>
    <string name="str_factory_peq_fo4coarse">FO4 Coarse</string>
    <string name="str_factory_peq_fo4fine">FO4 Fine</string>
    <string name="str_factory_peq_fo5coarse">FO5 Coarse</string>
    <string name="str_factory_peq_fo5fine">FO5 Fine</string>
    <string name="str_factory_ursa_info">Ursa Info</string>
    <string name="str_factory_ursa_version">Version</string>
    <string name="str_factory_ursa_version_val">0000</string>
    <string name="str_factory_ursa_changelist">Changelist</string>
    <string name="str_factory_ursa_changelist_val">0000</string>
    <string name="str_set_mute_color">Mute Color</string>
    <string name="str_factory_otheroption">Other Options</string>
    <string name="str_factory_otheroption_testpattern">Test Pattern</string>
    <string name="str_factory_otheroption_initialfunction">Initial Channel</string>
    <string name="str_other_option_text">Other Option Adjust</string>
    <string name="str_textview_factory_otheroption_text_off">Off</string>
    <string name="str_textview_factory_otheroption_initialfunction_val">DTV</string>
    <string name="str_factory_tvconfig_file_import">Import TV Config File</string>
    <string name="str_factory_tvconfig_file_export">Export TV Config File</string>
    <string name="str_factory_tvconfig_file_import_panel">Import Panel File</string>
    <string name="str_factory_tvconfig_file_export_panel">Export Panel File</string>
    <string name="str_factory_otheroption_burnInRGB">Burn In RGB</string>
    <string name="str_textview_factory_otheroption_burnInRGB_val">on</string>
    <string name="str_ursa_test_result_title">Result :</string>
    <string name="str_ursa_test_run_auto">Run Auto</string>
    <string name="str_ursa_test_title">Ursa Test</string>
    <string name="str_ursa_test_run">Run</string>
    <string name="str_Info_title">Info</string>
</resources>