<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dip"
    android:layout_height="600dip"
    android:background="#3280A0"
    android:orientation="vertical">
    <TextView
        android:id="@+id/ursa_test_title"
        android:layout_width="150dip"
        android:layout_height="50dip"
        android:text="@string/str_ursa_test_title"
        android:gravity="center"
        android:focusable="true"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/ursa_test_run_auto"
        android:layout_width="150dip"
        android:layout_height="50dip"
        android:layout_marginTop="150dip"
        android:layout_below="@id/ursa_test_title"
        android:text="@string/str_ursa_test_run_auto"
        android:gravity="center"
        android:textSize="24sp" />
    <Button
        android:id="@+id/ursa_test_run_button"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_marginTop="150dip"
        android:layout_below="@id/ursa_test_title"
        android:layout_toRightOf="@id/ursa_test_run_auto"
        android:text="@string/str_ursa_test_run" />
    <TextView
        android:id="@+id/ursa_test_result_title"
        android:layout_width="150dip"
        android:layout_height="50dip"
        android:layout_below="@id/ursa_test_run_auto"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/str_ursa_test_result_title"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/ursa_test_result"
        android:layout_width="100dip"
        android:layout_height="50dip"
        android:layout_marginTop="20dip"
        android:gravity="center_vertical"
        android:layout_below="@id/ursa_test_run_button"
        android:layout_toRightOf="@id/ursa_test_result_title"
        android:focusable="true"
        android:textSize="24sp" />
</RelativeLayout>
